argo/deployment-2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"deployment-2048","namespace":"game-2048"},"spec":{"replicas":5,"selector":{"matchLabels":{"app.kubernetes.io/name":"app-2048"}},"template":{"metadata":{"labels":{"app.kubernetes.io/name":"app-2048"}},"spec":{"containers":[{"image":"public.ecr.aws/l6m2t8p7/docker-2048:latest","imagePullPolicy":"Always","name":"app-2048","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2023-02-18T14:11:23Z"
  generation: 1
  name: deployment-2048
  namespace: game-2048
  resourceVersion: "23740"
  uid: 309d182a-543e-4904-bc63-927d833f32b3
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 5
  conditions:
  - lastTransitionTime: "2023-02-18T14:11:29Z"
    lastUpdateTime: "2023-02-18T14:11:29Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-02-18T14:11:23Z"
    lastUpdateTime: "2023-02-18T14:11:29Z"
    message: ReplicaSet "deployment-2048-6bc9fd6bf5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 5
  replicas: 5
  updatedReplicas: 5
