argo/new-argo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2 #This tells AWS to send traffic from the ALB using HTTP2. Can use GRPC as well if you want to leverage GRPC specific features
  labels:
    app: argogrpc
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: myargo
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argogrpc
  namespace: argocd
spec:
  ports:
  - name: "443"
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: myargo
  sessionAffinity: None
  type: NodePort
